# emugrid.com

./: .gitignore  2  package.json  pnpm-lock.yaml  tmux.sh  tsconfig.json
app/: globals.css  layout.tsx  page.module.css  page.module.scss  page.tsx
app/blog/: page.tsx
app/blog/adding-virtio-to-your-risc-v-os/: page.tsx
app/projects/: page.tsx
app/resume/: page.module.scss  page.tsx
app/risc-v-emulator/: Page.tsx  page.module.scss  page.tsx
app/risc-v-emulator/components/: InstructionList.module.scss  InstructionList.tsx  Uart.module.scss  Uart.tsx
app/risc-v-emulator/core/: CMakeCache.txt  CMakeLists.txt  Makefile  blocks.h  build.sh  bus.c  bus.h  cmake_install.cmake  cpu.c  cpu.h  disassemble.c  disassemble.h  elf.h  index.d.ts  main.c  main.cpp  main.js  trap.c  uart.c  uart.h  wasm_ar.mjs
app/risc-v-emulator/core/test/: a.out  build.sh  ctest.c  ecall  ecall.S  ecall.ld  ecall.s  test  test.S  test.ld  test.txt  testarray.S  uart  uart.S  uart.elf  uart.ld  uart_test.S  uart_test.elf
components/: DocumentIcon.module.scss  DocumentIcon.tsx  FileExplorer.module.scss  FileExplorer.tsx  ProjectCard.tsx  ResumeCard.module.scss  ResumeCard.tsx  Window.module.scss  Window.tsx
